Added ability to execute mvn command on run